--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,8 @@
 body {
-    background-color: yellow;
+    color: white;
+    background-image: url("../assets/images/galaxy.jpg");
+    background-size: cover;
+    background-position: center;
 }
 
 .hidden {
@@ -8,4 +11,8 @@ body {
 
 .capitalize {
   text-transform: capitalize;
+}
+
+#error, #error2 {
+  color: red;
 }
